Fixed pulses styling, now whole page appears (abnormal indicators in wrong positions)

--- a/src/physician/PulsesPage/style.css
+++ b/src/physician/PulsesPage/style.css
@@ -1,9 +1,16 @@
 .pulses-tab {
+    /* background-color: #ffffff;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: 100%; */
     background-color: #ffffff;
     display: flex;
     flex-direction: row;
     justify-content: center;
     width: 100%;
+    position: absolute;
+    top: 0px;
   }
   
   .pulses-tab .overlap-wrapper {
